fix layout issues in small screens

--- a/css/core.css
+++ b/css/core.css
@@ -117,6 +117,10 @@ color:#222;
 padding:2rem
 }
 
+.articles {
+width:90%
+}
+
 .article[dir="ltr"] p:first-of-type::first-letter {
 float:left;
 font-size:2rem;
@@ -272,7 +276,7 @@ padding-left:.5rem
 }
 
 article[dir="rtl"] .buttons a:before,main[dir="rtl"] .buttons a:before {
-margin-left:8px
+margin-left:.25rem
 }
 
 article[dir="rtl"] ol {
@@ -301,7 +305,7 @@ font-variant-numeric:oldstyle-nums
 }
 
 div.buttons a {
-margin:0 5px
+margin:.25rem
 }
 
 footer > span {
@@ -518,7 +522,7 @@ font-family:'KFGQPC Uthman Taha Naskh','Crimson Pro','Times New Roman'
 @media (max-width: 900px) {
 
 .ebook-details {
-	width: 95%
+width: 95%
 }
 
 ol#authors > li,ol#ebooks > li {
@@ -544,7 +548,6 @@ display:none
 
 #download li span:nth-child(3) {
 display:block;
-margin-left:2rem;
 padding-top:.5rem
 }
 
@@ -650,6 +653,9 @@ display:none
 }
 
 @media only screen and (max-width: 480px) {
+.ebook-details .buttons a {
+margin-right:.25rem
+}
 .more-ebooks li {
 margin:.25rem;
 width:35%
